--- a/src/main/webapp/single.html
+++ b/src/main/webapp/single.html
@@ -28,7 +28,7 @@
 					url : 'connector.elfinder'  // connector URL (REQUIRED)
 					// lang: 'ru',             // language (OPTIONAL)
 					,getFileCallback: function(file){
-						window.dialogArguments.value=file;
+						window.returnValue = file;
 						window.close();
 					}
 				}).elfinder('instance');
